Muutettu teksti: Liukuvertailu

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 }
             </script>
 
-            <h3 style="text-align: center; color: #FF8C00; font-size: 2rem; margin-top: 4rem; margin-bottom: 2rem; font-weight: 800;">Ennen ja Jälkeen - Liukuta Vertailuun</h3>
+            <h3 style="text-align: center; color: #FF8C00; font-size: 2rem; margin-top: 4rem; margin-bottom: 2rem; font-weight: 800;">Ennen ja Jälkeen - Liukuvertailu</h3>
             <div class="slider-carousel-wrapper">
                 <div class="slider-carousel" id="sliderCarousel">
                     <div class="carousel-slider-item active" data-before="images/maalaus-aita-ennen.jpeg" data-after="images/maalaus-aita-jalkeen.jpeg" data-label="Aita">
