Päivitetty tekstejä: keitä me olemme, palvelut ja tiimi

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div class="about-content">
                 <div>
                     <h3>Ammattilaiset Ulkomaalauksessa</h3>
-                    <p>Ulkomaalarit on vuonna 2025 perustettu ulkomaalaukseen erikoistunut yritys. Olemme sitoutuneet tarjoamaan korkeatasoisia maalauspalveluita kaikille rakennustyypeille.</p>
-                    <p>Tavoitteemme on tuoda reilua kilpailua markkinoille ja olla kuluttajan puolella. Tarjoamme ammattitaitoista ja korkealaatuista palvelua kilpailukykyisillä hinnoilla. Esimerkiksi omakotitalon ulkomaalauksessa tarjoamme saman laadun merkittävästi edullisemmin kuin alan suuret yritykset.</p>
+                    <p>Perustimme Ulkomaalarit-yrityksen vuonna 2025, kun huomasimme että maalausala kaipaa raikasta kilpailua. Meillä on pitkä kokemus ulkomaalauksesta, ja haluamme tehdä laadukasta työtä sopivalla hinnalla.</p>
+                    <p>Iso osa alan yrityksistä hinnoittelee mielestämme liian korkealle. Me haluamme olla asiakkaan puolella – sama ammattitaito ja huolellisuus, mutta järkevään hintaan. Soita tai lähetä viesti, niin jutellaan lisää projektistasi.</p>
                 </div>
                 <div class="services">
                     <h3>Palvelumme</h3>
@@ -53,7 +53,7 @@
                         <li>Liikekiinteistöjen maalaus</li>
                         <li>Puurakenteiden maalaus</li>
                         <li>Julkisivujen puuverhouksen uusiminen</li>
-                        <li>Kevyet timpurintyöt</li>
+                        <li>Timpurintyöt</li>
                     </ul>
                 </div>
                 <div class="paint-can">
@@ -73,14 +73,17 @@
                 <div class="team-member">
                     <img src="images/maalaus-juho-profiilikuva.jpeg" alt="Juho Soronen">
                     <h3>Juho Soronen</h3>
+                    <p>Yksityisasiakkaat</p>
                 </div>
                 <div class="team-member">
                     <img src="images/maalaus-maria-profiilikuva.jpeg" alt="Maria Soronen">
                     <h3>Maria Soronen</h3>
+                    <p>Taloyhtiökilpailutus</p>
                 </div>
                 <div class="team-member">
                     <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><rect width='128' height='128' fill='%23f0f0f0'/><circle cx='64' cy='44' r='24' fill='%23c7c7c7'/><path d='M24 116c4-26 24-36 40-36s36 10 40 36H24z' fill='%23c7c7c7'/></svg>" alt="Alisa Hirvasniemi">
                     <h3>Alisa Hirvasniemi</h3>
+                    <p>Työmaakoordinointi</p>
                 </div>
             </div>
         </div>
@@ -181,7 +184,7 @@
                                 <div class="divider-ball"></div>
                             </div>
                         </div>
-                        <p class="slider-description">Timpuri vaihtoi vanhat, kuluneet julkisivulaudat uusiin. Seinä pohjamaalattiin huolellisesti, minkä jälkeen seurasi viimeisen kerroksen maalaus. Tuloksena kaunis, pitkäikäinen julkisivu.</p>
+                        <p class="slider-description">Timpuri vaihtoi vanhat, kuluneet julkisivulaudat uusiin. Seinä pohjamaalattiin huolellisesti, minkä jälkeen seurasi viimeisen kerroksen maalaus.</p>
                     </div>
                     <div class="carousel-slider-item" data-before="images/maalaus-musta-oljymalaus-ennen.jpeg" data-after="images/maalaus-musta-oljymalaus-jalkeen.jpeg" data-label="Öljymaalaus">
                         <div class="before-after-slider" id="slider-2">
@@ -192,7 +195,7 @@
                                 <div class="divider-ball"></div>
                             </div>
                         </div>
-                        <p class="slider-description">Seinä oli maalattu helteellä noin viisi vuotta sitten, mikä johti maalin liituuntumiseen ja hilseilyyn. Pinta skrapattiin huolellisesti, pestiin homepesuaineella ja maalattiin öljymaalilla. Tulos on kestävä ja kaunis.</p>
+                        <p class="slider-description">Seinä oli maalattu helteellä noin viisi vuotta sitten, mikä johti maalin liituuntumiseen ja hilseilyyn. Pinta skrapattiin huolellisesti, pestiin homepesuaineella ja maalattiin öljymaalilla.</p>
                     </div>
                 </div>
                 <button class="carousel-slider-button prev" onclick="changeSliderImage(-1)">&#10094;</button>
