Lisätty Google Search Console verification meta-tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="ulkomaalaus, maalari Oulu, ulkomaalari, taloyhtiö maalaus, omakotitalon maalaus, julkisivumaalaus, maalauspalvelu Oulu, maalausfirma Oulu, ulkomaalaus Oulu">
     <meta name="author" content="Ulkomaalarit">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="google-site-verification" content="nfGGqvVDN4IOhtlA4K6mcs__LUqpLYUzoyiDHOkF2hY">
     <link rel="canonical" href="https://juhosor.github.io/ulkomaalarit.fi/">
     
     <!-- Geo Meta Tags -->
