Päivitetty kaikki URL:t käyttämään ulkomaalarit.fi domainia

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Ulkomaalarit">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="google-site-verification" content="nfGGqvVDN4IOhtlA4K6mcs__LUqpLYUzoyiDHOkF2hY">
-    <link rel="canonical" href="https://juhosor.github.io/ulkomaalarit.fi/">
+    <link rel="canonical" href="https://ulkomaalarit.fi/">
     
     <!-- Geo Meta Tags -->
     <meta name="geo.region" content="FI-17">
@@ -22,9 +22,9 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Ulkomaalarit Oulu - Ammattitaitoista Ulkomaalausta">
     <meta property="og:description" content="Ammattitaitoista ulkomaalausta omakotitaloihin ja taloyhtiöihin Oulun seudulla. Kilpailukykyiset hinnat, laadukas työ. Pyydä ilmainen tarjous!">
-    <meta property="og:url" content="https://juhosor.github.io/ulkomaalarit.fi/">
+    <meta property="og:url" content="https://ulkomaalarit.fi/">
     <meta property="og:site_name" content="Ulkomaalarit">
-    <meta property="og:image" content="https://juhosor.github.io/ulkomaalarit.fi/images/maalaus-maalipurkki.jpeg">
+    <meta property="og:image" content="https://ulkomaalarit.fi/images/maalaus-maalipurkki.jpeg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Ulkomaalarit - Ammattitaitoista ulkomaalausta Oulun seudulla">
@@ -33,7 +33,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ulkomaalarit Oulu - Ammattitaitoista Ulkomaalausta">
     <meta name="twitter:description" content="Ammattitaitoista ulkomaalausta omakotitaloihin ja taloyhtiöihin Oulun seudulla. Kilpailukykyiset hinnat ja laadukas työ.">
-    <meta name="twitter:image" content="https://juhosor.github.io/ulkomaalarit.fi/images/maalaus-maalipurkki.jpeg">
+    <meta name="twitter:image" content="https://ulkomaalarit.fi/images/maalaus-maalipurkki.jpeg">
     
     <link rel="icon" href="ulkomaalari.ico">
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
@@ -231,7 +231,7 @@
       "@type": "ProfessionalService",
       "name": "Ulkomaalarit",
       "description": "Ulkomaalaukseen erikoistunut yritys Oulun seudulla. Tarjoamme ammattitaitoista ulkomaalausta omakotitaloihin, liikekiinteistöihin ja taloyhtiöihin.",
-      "url": "https://juhosor.github.io/ulkomaalarit.fi",
+      "url": "https://ulkomaalarit.fi",
       "telephone": "+358404115001",
       "email": "soronenjuho@gmail.com",
       "address": {
