Poistettu korttimaksu maksutavoista

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         "geoRadius": "50000"
       },
       "priceRange": "3000-8000 EUR",
-      "paymentAccepted": "Käteinen, Korttimaksu, Lasku",
+      "paymentAccepted": "Käteinen, Lasku",
       "currenciesAccepted": "EUR",
       "openingHoursSpecification": [
         {
