--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
                 </div>
                 <div class="paint-can">
                     <a href="#gallery">
-                        <img src="images/maalaus-maalipurkki.jpeg" alt="Ammattimaalarin työkalut - ulkomaalaus Oulu - laadukkaat maalaustuotteet ja työvälineet">
+                        <img src="images/maalaus-maalipurkki.jpeg" alt="Ammattimaalarin työkalut - ulkomaalaus Oulu - laadukkaat maalaustuotteet ja työvälineet" loading="eager" fetchpriority="high">
                     </a>
                 </div>
             </div>
@@ -519,19 +519,19 @@
             <h2>Tiimimme</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="images/maalaus-juho-profiilikuva.jpeg" alt="Juho Soronen - Ulkomaalarit perustaja ja työmääpäällikkö - ammattimaalari Oulu - yksityisasiakkaiden ulkomaalauspalvelut">
+                    <img src="images/maalaus-juho-profiilikuva.jpeg" alt="Juho Soronen - Ulkomaalarit perustaja ja työmääpäällikkö - ammattimaalari Oulu - yksityisasiakkaiden ulkomaalauspalvelut" loading="lazy">
                     <h3>Juho Soronen</h3>
                     <p class="team-role">Perustaja & Yksityisasiakkaat</p>
                     <p class="team-description">Yksityisasiakkaiden projektit. Pitkä kokemus ulkomaalauksesta ja asiakaspalvelusta.</p>
                 </div>
                 <div class="team-member">
-                    <img src="images/maalaus-maria-profiilikuva.jpeg" alt="Maria Soronen - Ulkomaalarit perustaja - taloyhtiöiden kilpailutusasiantuntija - isännöitsijäpalvelut Oulu">
+                    <img src="images/maalaus-maria-profiilikuva.jpeg" alt="Maria Soronen - Ulkomaalarit perustaja - taloyhtiöiden kilpailutusasiantuntija - isännöitsijäpalvelut Oulu" loading="lazy">
                     <h3>Maria Soronen</h3>
                     <p class="team-role">Perustaja & Taloyhtiökilpailutus</p>
                     <p class="team-description">Erikoisosaamisena taloyhtiöiden kilpailutusprosessit ja isännöitsijäyhteistyö. Vastaan tarjouksista ja asiakaskommunikaatiosta.</p>
                 </div>
                 <div class="team-member">
-                    <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><rect width='128' height='128' fill='%23f0f0f0'/><circle cx='64' cy='44' r='24' fill='%23c7c7c7'/><path d='M24 116c4-26 24-36 40-36s36 10 40 36H24z' fill='%23c7c7c7'/></svg>" alt="Alisa Hirvasniemi - työmaakoordinaattori - ulkomaalaus projektijohtaja - Ulkomaalarit Oulu">
+                    <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><rect width='128' height='128' fill='%23f0f0f0'/><circle cx='64' cy='44' r='24' fill='%23c7c7c7'/><path d='M24 116c4-26 24-36 40-36s36 10 40 36H24z' fill='%23c7c7c7'/></svg>" alt="Alisa Hirvasniemi - työmaakoordinaattori - ulkomaalaus projektijohtaja - Ulkomaalarit Oulu" loading="lazy">
                     <h3>Alisa Hirvasniemi</h3>
                     <p class="team-role">Työmaakoordinaattori</p>
                     <p class="team-description">Vastaa aikatauluista, materiaalitoimitusten organisoinnista ja työmaan sujuvuudesta.</p>
@@ -546,19 +546,19 @@
             <h2>Galleria - Aiemmat Projektit</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="images/maalaus-oljymalaus-katolla.jpg" alt="Ulkomaalari työskentelee katolla - seinän öljymaalaus - ammattitaitoinen julkisivumaalaus Oulu - Ulkomaalarit projekti">
+                    <img src="images/maalaus-oljymalaus-katolla.jpg" alt="Ulkomaalari työskentelee katolla - seinän öljymaalaus - ammattitaitoinen julkisivumaalaus Oulu - Ulkomaalarit projekti" loading="lazy">
                     <p>Seinän öljymaalausta katolla</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="images/maalaus-taloyhtion-aita.jpg" alt="Taloyhtiön puuaidan huoltomaalaus Oulu - ammattitaitoinen aitamaalaus - ulkopuun pintasuojaus - Ulkomaalarit referenssikohde">
+                    <img src="images/maalaus-taloyhtion-aita.jpg" alt="Taloyhtiön puuaidan huoltomaalaus Oulu - ammattitaitoinen aitamaalaus - ulkopuun pintasuojaus - Ulkomaalarit referenssikohde" loading="lazy">
                     <p>Taloyhtiön puuaidan huoltomaalaus</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="images/maalaus-tyoskentely-teline.jpeg" alt="Ulkomaalaus telinetyöskentely - ammattimainen julkisivun maalaus - työturvallisuus ulkomaalauksessa Oulu - Ulkomaalarit ammattilaiset">
+                    <img src="images/maalaus-tyoskentely-teline.jpeg" alt="Ulkomaalaus telinetyöskentely - ammattimainen julkisivun maalaus - työturvallisuus ulkomaalauksessa Oulu - Ulkomaalarit ammattilaiset" loading="lazy">
                     <p>Työskentelyä telineellä</p>
                 </div>
                 <div class="gallery-item">
-                    <img src="images/maalaus-tyoskentely-henkilonostin.jpeg" alt="Henkilönostimen käyttö ulkomaalauksessa - vaikeaselitteisten kohteiden maalaus Oulu - korkeiden julkisivujen maalauspalvelu - Ulkomaalarit erikoisosaaminen">
+                    <img src="images/maalaus-tyoskentely-henkilonostin.jpeg" alt="Henkilönostimen käyttö ulkomaalauksessa - vaikeaselitteisten kohteiden maalaus Oulu - korkeiden julkisivujen maalauspalvelu - Ulkomaalarit erikoisosaaminen" loading="lazy">
                     <p>Henkilönostimen käyttö vaikeapääsyisessä kohteessa</p>
                 </div>
             </div>
@@ -567,10 +567,10 @@
             <h3 style="text-align: center; color: #FF8C00; font-size: 2rem; margin-top: 3rem; margin-bottom: 2rem; font-weight: 800;">Kunnostusprosessi - Vaihe Vaiheelta</h3>
             <div class="image-carousel">
                 <div class="carousel-container">
-                    <img src="images/maalaus-vaihe1.jpeg" alt="Ennen ulkomaalausta - julkisivun alkutila - kuluneet pintamateriaalit - ulkomaalauskunnostus Oulu vaihe 1" class="carousel-image active">
-                    <img src="images/maalaus-vaihe2.jpeg" alt="Pinnan hiominen ulkomaalauksessa - julkisivun esikäsittely - pintavalmistelu maalaria varten Oulu - ammattitaitoinen pintatyö" class="carousel-image">
-                    <img src="images/maalaus-vaihe3.jpeg" alt="Pohjamaalaus ulkoseinälle - julkisivun pohjustus - ammattitaitoinen maalaustyö Oulu - kestävä pintasuojaus" class="carousel-image">
-                    <img src="images/maalaus-vaihe4.jpeg" alt="Valmis ulkomaalaustyö - viimeistelty julkisivu - laadukas lopputulos - ammattimaalarin työ Oulu - Ulkomaalarit referenssikohde" class="carousel-image">
+                    <img src="images/maalaus-vaihe1.jpeg" alt="Ennen ulkomaalausta - julkisivun alkutila - kuluneet pintamateriaalit - ulkomaalauskunnostus Oulu vaihe 1" class="carousel-image active" loading="lazy">
+                    <img src="images/maalaus-vaihe2.jpeg" alt="Pinnan hiominen ulkomaalauksessa - julkisivun esikäsittely - pintavalmistelu maalaria varten Oulu - ammattitaitoinen pintatyö" class="carousel-image" loading="lazy">
+                    <img src="images/maalaus-vaihe3.jpeg" alt="Pohjamaalaus ulkoseinälle - julkisivun pohjustus - ammattitaitoinen maalaustyö Oulu - kestävä pintasuojaus" class="carousel-image" loading="lazy">
+                    <img src="images/maalaus-vaihe4.jpeg" alt="Valmis ulkomaalaustyö - viimeistelty julkisivu - laadukas lopputulos - ammattimaalarin työ Oulu - Ulkomaalarit referenssikohde" class="carousel-image" loading="lazy">
                     <div class="carousel-label" id="carouselLabel">Vaihe 1: Ennen käsittelyä</div>
                 </div>
                 <button class="carousel-button prev" onclick="changeImage(-1)">&#10094;</button>
@@ -617,8 +617,8 @@
                 <div class="slider-carousel" id="sliderCarousel">
                     <div class="carousel-slider-item active" data-before="images/maalaus-aita-ennen.jpeg" data-after="images/maalaus-aita-jalkeen.jpeg" data-label="Aita">
                         <div class="before-after-slider" id="slider-0">
-                            <img src="images/maalaus-aita-ennen.jpeg" alt="Ennen maalausta - roskakatoksen vanha pintamateriaali - kuluneet puuosat - homevahinko - Oulu ulkomaalauskunnostuskohde" class="img-before">
-                            <img src="images/maalaus-aita-jalkeen.jpeg" alt="Jälkeen maalauksen - roskakatoksen uusi pintamaalaus - homeenestoaineella käsitelty - ammattitaitoinen ulkomaalaus Oulu - Ulkomaalarit" class="img-after">
+                            <img src="images/maalaus-aita-ennen.jpeg" alt="Ennen maalausta - roskakatoksen vanha pintamateriaali - kuluneet puuosat - homevahinko - Oulu ulkomaalauskunnostuskohde" class="img-before" loading="lazy">
+                            <img src="images/maalaus-aita-jalkeen.jpeg" alt="Jälkeen maalauksen - roskakatoksen uusi pintamaalaus - homeenestoaineella käsitelty - ammattitaitoinen ulkomaalaus Oulu - Ulkomaalarit" class="img-after" loading="lazy">
                             <div class="slider-divider">
                                 <div class="divider-line"></div>
                                 <div class="divider-ball"></div>
@@ -628,8 +628,8 @@
                     </div>
                     <div class="carousel-slider-item" data-before="images/maalaus-julkisivulauta-ennen.jpeg" data-after="images/maalaus-julkisivulauta-jalkeen.jpeg" data-label="Julkisivulauta">
                         <div class="before-after-slider" id="slider-1">
-                            <img src="images/maalaus-julkisivulauta-ennen.jpeg" alt="Ennen - vanhat kuluneet julkisivulaudat - vaurioitunut puupinta - kunnostusta tarvitseva seinä - ulkomaalausremontti Oulu" class="img-before">
-                            <img src="images/maalaus-julkisivulauta-jalkeen.jpeg" alt="Jälkeen - uudet julkisivulaudat - pohjamaalattu seinä - ammattitimpurin ja maalarin yhteistyö - laadukas lopputulos Oulu Ulkomaalarit" class="img-after">
+                            <img src="images/maalaus-julkisivulauta-ennen.jpeg" alt="Ennen - vanhat kuluneet julkisivulaudat - vaurioitunut puupinta - kunnostusta tarvitseva seinä - ulkomaalausremontti Oulu" class="img-before" loading="lazy">
+                            <img src="images/maalaus-julkisivulauta-jalkeen.jpeg" alt="Jälkeen - uudet julkisivulaudat - pohjamaalattu seinä - ammattitimpurin ja maalarin yhteistyö - laadukas lopputulos Oulu Ulkomaalarit" class="img-after" loading="lazy">
                             <div class="slider-divider">
                                 <div class="divider-line"></div>
                                 <div class="divider-ball"></div>
@@ -639,8 +639,8 @@
                     </div>
                     <div class="carousel-slider-item" data-before="images/maalaus-musta-oljymalaus-ennen.jpeg" data-after="images/maalaus-musta-oljymalaus-jalkeen.jpeg" data-label="Öljymaalaus">
                         <div class="before-after-slider" id="slider-2">
-                            <img src="images/maalaus-musta-oljymalaus-ennen.jpeg" alt="Ennen - liituuntunut ja hilseillään maalipinta - heltevaurioitunut ulkoseinä - pintaremontti tarve Oulu - ammattimaalarin arvio" class="img-before">
-                            <img src="images/maalaus-musta-oljymalaus-jalkeen.jpeg" alt="Jälkeen - uusi öljymaalipinta - skrapattu ja pestty homepesuaineella - kestävä ammattilaatuinen ulkomaalaus Oulu - Ulkomaalarit erikoisosaaminen" class="img-after">
+                            <img src="images/maalaus-musta-oljymalaus-ennen.jpeg" alt="Ennen - liituuntunut ja hilseillään maalipinta - heltevaurioitunut ulkoseinä - pintaremontti tarve Oulu - ammattimaalarin arvio" class="img-before" loading="lazy">
+                            <img src="images/maalaus-musta-oljymalaus-jalkeen.jpeg" alt="Jälkeen - uusi öljymaalipinta - skrapattu ja pestty homepesuaineella - kestävä ammattilaatuinen ulkomaalaus Oulu - Ulkomaalarit erikoisosaaminen" class="img-after" loading="lazy">
                             <div class="slider-divider">
                                 <div class="divider-line"></div>
                                 <div class="divider-ball"></div>
