Update favicon assets

--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
     <meta name="twitter:description" content="Ammattitaitoista ulkomaalausta omakotitaloihin ja taloyhtiöihin Oulun seudulla. Kilpailukykyiset hinnat ja laadukas työ.">
     <meta name="twitter:image" content="https://ulkomaalarit.fi/images/maalaus-maalipurkki.jpeg">
     
-    <link rel="icon" href="ulkomaalari.ico">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
