Add business address

--- a/index.html
+++ b/index.html
@@ -43,6 +43,24 @@
     <link rel="sitemap" type="application/xml" href="/sitemap.xml">
     <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "Organization",
+            "name": "Ulkomaalarit",
+            "url": "https://ulkomaalarit.fi/",
+            "logo": "https://ulkomaalarit.fi/favicon.ico",
+            "telephone": "+358404115001",
+            "address": {
+                "@type": "PostalAddress",
+                "streetAddress": "Kiiminkijoentie 718",
+                "postalCode": "90910",
+                "addressLocality": "Oulu",
+                "addressCountry": "FI"
+            }
+        }
+    </script>
     
     <!-- FAQ Styles -->
     <style>
@@ -240,7 +258,8 @@
       "email": "soronenjuho@gmail.com",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Kiiminkijoentie 90910",
+                "streetAddress": "Kiiminkijoentie 718",
+                "postalCode": "90910",
         "addressLocality": "Oulu",
         "addressCountry": "FI"
       },
@@ -854,7 +873,7 @@
                     </div>
                     <div class="info-item">
                         <h4>Osoite</h4>
-                        <p>Kiiminkijoentie 90910<br>Oulu, Suomi</p>
+                        <p>Kiiminkijoentie 718<br>90910 Oulu, Suomi</p>
                     </div>
                     <div class="info-item">
                         <h4>Aukioloajat</h4>
