--- a/index.html
+++ b/index.html
@@ -860,9 +860,10 @@
     <section id="contact" class="contact">
         <div class="container">
             <h2>Ota Yhteyttä</h2>
+            <p style="margin: -1.5rem 0 2.5rem; text-align: center; color: #666; font-weight: 600;">Tarjouspyynnön lähettäminen vie alle minuutin.</p>
             <div class="contact-content">
                 <div class="contact-info">
-                    <h3>Ota Meihin Yhteyttä</h3>
+                    <h3>Yhteystiedot</h3>
                     <div class="info-item">
                         <h4>Puhelin</h4>
                         <p><a href="tel:0404115001">040 411 5001</a></p>
@@ -897,7 +898,7 @@
                         </div>
                         <div class="form-group">
                             <label for="message">Viesti *</label>
-                            <textarea id="message" name="message" rows="5" required></textarea>
+                            <textarea id="message" name="message" rows="5" required placeholder="Tähän riittää kohteen osoite, sinulle sopiva aika ilmaiselle tarjouskäynnille sekä mahdolliset huomiot."></textarea>
                         </div>
                         <button type="submit" class="submit-button">Lähetä Yhteydenotto</button>
                     </form>
