Update services and about copy

--- a/index.html
+++ b/index.html
@@ -500,8 +500,8 @@
             <div class="about-content">
                 <div>
                     <h3>Ammattilaiset Ulkomaalauksessa</h3>
-                    <p>Perustimme Ulkomaalarit-yrityksen vuonna 2025, kun huomasimme että maalausala kaipaa raikasta kilpailua. Meillä on pitkä kokemus ulkomaalauksesta, ja haluamme tehdä laadukasta työtä sopivalla hinnalla.</p>
-                    <p>Iso osa alan yrityksistä hinnoittelee mielestämme liian korkealle. Me haluamme olla asiakkaan puolella – sama ammattitaito ja huolellisuus, mutta järkevään hintaan. Soita tai lähetä viesti, niin jutellaan lisää projektistasi.</p>
+                    <p>Olemme oululainen yritys, jonka taustalla on pitkä kokemus ulkomaalauksesta. Perustimme Ulkomaalarit‑yrityksen vuonna 2025 tuodaksemme alalle tervettä kilpailua ja entistä parempaa asiakaspalvelua.</p>
+                    <p>Työmme perustuu ammattimaiseen toteutukseen, selkeään palveluun ja avaimet käteen ‑periaatteeseen. Me hoidamme suunnittelun, aikataulun ja työn – sinä saat valmiin lopputuloksen helposti.</p>
                 </div>
                 <div class="services">
                     <h3>Palvelumme</h3>
@@ -511,6 +511,7 @@
                         <li>Liikekiinteistöjen maalaus</li>
                         <li>Julkisivujen puuverhouksen uusiminen</li>
                         <li>Timpurintyöt</li>
+                        <li>Metalli-, betoni- ja kivipintojen maalaus</li>
                     </ul>
                 </div>
                 <div class="paint-can">
@@ -798,11 +799,20 @@
                 </div>
                 <div class="faq-item">
                     <button class="faq-question">
+                        <span>Kannattaako tiilitalo maalata?</span>
+                        <span class="faq-icon">+</span>
+                    </button>
+                    <div class="faq-answer">
+                        <p>Yleensä ei. Tiiliseinä on lähes huoltovapaa, mutta maalaus muuttaa sen maalipinnaksi, joka vaatii jatkossa huoltomaalauksen noin 10–15 vuoden välein. Siksi tiilitalon maalaaminen on useimmiten huono idea, ellei siihen ole erityistä tarvetta.</p>
+                    </div>
+                </div>
+                <div class="faq-item">
+                    <button class="faq-question">
                         <span>Kuinka kauan omakotitalon ulkomaalaus kestää?</span>
                         <span class="faq-icon">+</span>
                     </button>
                     <div class="faq-answer">
-                        <p>Keskikokoisen omakotitalon maalaus kestää yleensä noin viikon, riippuen pintojen kunnosta ja sääolosuhteista. Aikataulu sisältää esityöt, pohjustuksen ja maalauksen. Ker...mme tarkan arvion kun olemme nähneet kohteen.</p>
+                        <p>Keskikokoisen omakotitalon maalaus kestää yleensä noin viikon, riippuen pintojen kunnosta ja sääolosuhteista. Aikataulu sisältää esityöt, pohjustuksen ja maalauksen. Kerromme tarkan arvion, kun olemme nähneet kohteen.</p>
                     </div>
                 </div>
                 <div class="faq-item">
