--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@
 
     <section id="home" class="hero">
         <div class="container">
-            <h2>Ammattitaito ja Laatu Ulkomaalauksessa</h2>
-            <p>Luotettava kumppani rakennuksesi pintakäsittelyyn</p>
+            <h2>Ulkomaalaus Oulussa – Ammattitaito ja Laatu</h2>
+            <p>Luotettava kumppani rakennuksesi pintakäsittelyyn Oulun seudulla</p>
             <a href="#contact" class="cta-button">Pyydä Tarjous</a>
         </div>
     </section>
