Update page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ulkomaalarit Oulu - Ammattitaitoista Ulkomaalausta | Taloyhtiöt & Omakotitalot</title>
+    <title>Ulkomaalarit | Talon Maalaus Oulu | Julkisivumaalaus</title>
     <meta name="description" content="Ulkomaalarit Oulu - Ammattitaitoista ulkomaalausta omakotitaloihin ja taloyhtiöihin Oulun seudulla. Kilpailukykyiset hinnat ja laadukas työ. Pyydä ilmainen tarjous!">
     <meta name="keywords" content="ulkomaalaus, maalari Oulu, ulkomaalari, taloyhtiö maalaus, omakotitalon maalaus, julkisivumaalaus, maalauspalvelu Oulu, maalausfirma Oulu, ulkomaalaus Oulu">
     <meta name="author" content="Ulkomaalarit">
