Vaihda yrityksen sähköposti, lisää Juho Sorosen sähköposti profiiliin, poista Marian profiili

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             "url": "https://ulkomaalarit.fi/",
             "logo": "https://ulkomaalarit.fi/favicon.ico",
             "telephone": "+358404115001",
+            "email": "ulkomaalarit@gmail.com",
             "address": {
                 "@type": "PostalAddress",
                 "streetAddress": "Kiiminkijoentie 718",
@@ -533,18 +534,7 @@
                     <h3>Juho Soronen</h3>
                     <p class="team-role">Perustaja & Yksityisasiakkaat</p>
                     <p class="team-description">Yksityisasiakkaiden projektit. Pitkä kokemus ulkomaalauksesta ja asiakaspalvelusta.</p>
-                </div>
-                <div class="team-member">
-                    <img src="images/maalaus-maria-profiilikuva.jpeg" alt="Maria Soronen - Ulkomaalarit perustaja - taloyhtiöiden kilpailutusasiantuntija - isännöitsijäpalvelut Oulu">
-                    <h3>Maria Soronen</h3>
-                    <p class="team-role">Perustaja & Taloyhtiökilpailutus</p>
-                    <p class="team-description">Erikoisosaamisena taloyhtiöiden kilpailutusprosessit ja isännöitsijäyhteistyö. Vastaan tarjouksista ja asiakaskommunikaatiosta.</p>
-                </div>
-                <div class="team-member">
-                    <img src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><rect width='128' height='128' fill='%23f0f0f0'/><circle cx='64' cy='44' r='24' fill='%23c7c7c7'/><path d='M24 116c4-26 24-36 40-36s36 10 40 36H24z' fill='%23c7c7c7'/></svg>" alt="Alisa Hirvasniemi - työmaakoordinaattori - ulkomaalaus projektijohtaja - Ulkomaalarit Oulu">
-                    <h3>Alisa Hirvasniemi</h3>
-                    <p class="team-role">Työmaakoordinaattori</p>
-                    <p class="team-description">Vastaa aikatauluista, materiaalitoimitusten organisoinnista ja työmaan sujuvuudesta.</p>
+                    <p class="team-description"><strong>Sähköposti:</strong> <a href="mailto:soronenjuho@gmail.com">soronenjuho@gmail.com</a></p>
                 </div>
             </div>
         </div>
@@ -880,7 +870,7 @@
                     </div>
                     <div class="info-item">
                         <h4>Sähköposti</h4>
-                        <p><a href="mailto:soronenjuho@gmail.com">soronenjuho@gmail.com</a></p>
+                        <p><a href="mailto:ulkomaalarit@gmail.com">ulkomaalarit@gmail.com</a></p>
                     </div>
                     <div class="info-item">
                         <h4>Osoite</h4>
