--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
             "url": "https://ulkomaalarit.fi/",
             "logo": "https://ulkomaalarit.fi/favicon.ico",
             "telephone": "+358404115001",
-            "email": "soronenjuho@gmail.com",
             "address": {
                 "@type": "PostalAddress",
                 "streetAddress": "Kiiminkijoentie 718",
@@ -408,10 +407,10 @@
         {
           "@type": "Question",
           "name": "Miksi valita Ulkomaalarit maalausfirmaksi?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Ulkomaalarit tarjoaa ammattitaitoista ulkomaalausta reiluun hintaan Oulun seudulla. Meillä on pitkä kokemus alalta ja haluamme tuoda markkinoille tervettä kilpailua. Saat saman laadun ja ammattitaidon kuin suurilta yrityksiltä, mutta järkevämmällä hinnoittelulla."
-          }
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Kun valitset meidät, valitset kokeneet maalarit. Olemme kaikki maalanneet useita vuosia kohteita ympäri Suomen, ymmärrämme kuinka toteuttaa vaikeimmatkin projektit ja haluamme henkilökohtaisesti onnistua jokaisessa urakassa. Haluamme olla yksinkertaisesti paras vaihtoehto."
+                    }
         },
         {
           "@type": "Question",
@@ -432,10 +431,10 @@
         {
           "@type": "Question",
           "name": "Toimitteko Oulun ulkopuolella?",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "Kyllä, toimimme koko Oulun seudulla noin 50 km säteellä. Palvelemme muun muassa Haukiputaalla, Kiimingissä, Muhoksella ja Oulunsalossa. Ota yhteyttä, niin varmistamme palvelualueemme projektillesi."
-          }
+                    "acceptedAnswer": {
+                        "@type": "Answer",
+                        "text": "Toimimme pääasiassa Oulun seudulla ja keskitymme noin 50 km säteelle Oulusta, mutta teemme poikkeuksia tapauskohtaisesti. Ota yhteyttä, niin katsotaan onnistuuko projekti myös kauempana."
+                    }
         },
         {
           "@type": "Question",
@@ -527,6 +526,21 @@
     <!-- Team Section -->
     <section id="team" class="team">
         <div class="container">
+            <h2>Tiimimme</h2>
+            <div class="team-grid">
+                <div class="team-member">
+                    <img src="images/maalaus-juho-profiilikuva.jpeg" alt="Juho Soronen - Ulkomaalarit työmääpäällikkö - ammattimaalari Oulu - yksityisasiakkaiden ulkomaalauspalvelut">
+                    <h3>Juho Soronen</h3>
+                    <p class="team-role">Yksityisasiakkaat</p>
+                    <p class="team-description">Yksityisasiakkaiden projektit. Pitkä kokemus ulkomaalauksesta ja asiakaspalvelusta.</p>
+                </div>
+                <div class="team-member">
+                    <img src="images/maalaus-maria-profiilikuva.jpeg" alt="Maria Soronen - taloyhtiöiden kilpailutusasiantuntija - isännöitsijäpalvelut Oulu">
+                    <h3>Maria Soronen</h3>
+                    <p class="team-role">Taloyhtiökilpailutus</p>
+                    <p class="team-description">Erikoisosaamisena taloyhtiöiden kilpailutusprosessit ja isännöitsijäyhteistyö. Vastaan tarjouksista ja asiakaskommunikaatiosta.</p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -774,7 +788,7 @@
                         <span class="faq-icon">+</span>
                     </button>
                     <div class="faq-answer">
-                        <p>Teemme laadukasta työtä ilman turhaa hinnoittelua. Meillä on pitkä kokemus alalta ja hoidamme projektit ammattitaitoisesti, mutta ilman suuryritysten raskaita yleiskuluja. Saat saman lopputuloksen järkevään hintaan.</p>
+                        <p>Kun valitset meidät, valitset kokeneet maalarit. Olemme kaikki maalanneet useita vuosia kohteita ympäri Suomen, ymmärrämme kuinka toteuttaa vaikeimmatkin projektit ja haluamme henkilökohtaisesti onnistua jokaisessa urakassa. Haluamme olla yksinkertaisesti paras vaihtoehto.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -783,7 +797,7 @@
                         <span class="faq-icon">+</span>
                     </button>
                     <div class="faq-answer">
-                        <p>Yleensä ei. Tiiliseinä on lähes huoltovapaa, mutta maalaus muuttaa sen maalipinnaksi, joka vaatii jatkossa huoltomaalauksen noin 10–15 vuoden välein. Siksi tiilitalon maalaaminen on useimmiten huono idea, ellei siihen ole erityistä tarvetta.</p>
+                        <p>Yleensä ei. Tiiliseinä on lähes huoltovapaa, mutta maalaus muuttaa sen maalipinnaksi, joka vaatii jatkossa huoltomaalauksen noin 10–15 vuoden välein. Ellei tähän ole erityistä tarvetta, ei kannata. Harkitse muita vaihtoehtoja, kuten puhdistusta ja suojausta.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -810,7 +824,7 @@
                         <span class="faq-icon">+</span>
                     </button>
                     <div class="faq-answer">
-                        <p>Kyllä, toimimme koko Oulun seudulla noin 50 km säteellä. Palvelemme muun muassa Haukiputaalla, Kiimingissä, Muhoksella ja Oulunsalossa. Ota yhteyttä, niin varmistamme palvelualueemme.</p>
+                        <p>Toimimme pääasiassa Oulun seudulla ja keskitymme noin 50 km säteelle Oulusta, mutta teemme poikkeuksia tapauskohtaisesti. Ota yhteyttä, niin katsotaan onnistuuko projekti myös kauempana.</p>
                     </div>
                 </div>
                 <div class="faq-item">
@@ -849,11 +863,6 @@
     <!-- Contact Section -->
     <section id="contact" class="contact">
         <div class="container">
-            <div style="max-width: 500px; margin: 0 auto 2.5rem auto; background: #f8f9fa; border-radius: 16px; box-shadow: 0 4px 16px rgba(30,64,175,0.12); padding: 2.2rem 1.5rem; text-align: center;">
-                <img src="images/maalaus-juho-profiilikuva.jpeg" alt="Juho Soronen - Ulkomaalarit perustaja" style="width: 120px; height: 120px; border-radius: 50%; margin-bottom: 1.1rem; object-fit: cover; aspect-ratio: 1 / 1;">
-                <div style="font-weight: 800; color: #1E40AF; font-size: 1.45rem;">Juho Soronen</div>
-                <div style="color: #555; font-size: 1.15rem; margin-bottom: 0.5rem;">Tiimin yhteyshenkilö, Ulkomaalarit</div>
-            </div>
             <h2>Ota Yhteyttä</h2>
             <p style="margin: -1.5rem 0 2.5rem; text-align: center; color: #666; font-weight: 600;">Tarjouspyynnön lähettäminen vie alle minuutin.</p>
             <div class="contact-content">
@@ -861,7 +870,7 @@
                     <h3>Yhteystiedot</h3>
                     <div class="info-item">
                         <h4>Puhelin</h4>
-                        <p><a href="tel:+358404115001">+358 40 411 5001</a></p>
+                        <p><a href="tel:0404115001">040 411 5001</a></p>
                     </div>
                     <div class="info-item">
                         <h4>Sähköposti</h4>
@@ -914,7 +923,7 @@
     <!-- WhatsApp Button -->
     <a href="https://wa.me/358404115001" class="whatsapp-button" target="_blank" rel="noopener noreferrer" aria-label="Ota yhteyttä WhatsAppissa">
         <svg viewBox="0 0 32 32" width="32" height="32">
-            <path fill="currentColor" d="M16 0C7.164 0 0 7.164 0 16c0 2.824.736 5.488 2.024 7.784L0 32l8.408-2.008A15.926 15.926 0 0016 32c8.836 0 16-7.164 16-16S24.836 0 16 0zm0 29.333c-2.588 0-5.088-.74-7.244-2.132l-.52-.308-5.396 1.288 1.44-5.144-.336-.536A13.24 13.24 0 012.667 16c0-7.364 5.969-13.333 13.333-13.333S29.333 8.636 29.333 16 23.364 29.333 16 29.333zm7.308-9.977c-.4-.2-2.368-1.168-2.736-1.3-.368-.136-.636-.2-.904.2-.268.4-1.036 1.3-1.268 1.568-.236.268-.468.3-.868.1-.4-.2-1.688-.62-3.216-1.984-1.188-1.988-2.368-2.22-2.768-.236-.4-.024-.616.176-.816.18-.18.4-.468.6-.704.2-.232.268-.4.4-.668.136-.268.068-.5-.032-.7-.1-.2-.904-2.176-1.24-2.98-.328-.78-.66-.676-.904-.688-.232-.012-.5-.016-.768-.016s-.7.1-1.068.5c-.368.4-1.4 1.368-1.4 3.336s1.432 3.868 1.632 4.136c.2.268 2.824 4.312 6.844 6.048.956.416 1.704.664 2.288.848.96.304 1.836.26 2.528.156.772-.116 2.368-.968 2.7-1.904.336-.936.336-1.74.236-1.904-.1-.168-.368-.268-.768-.468z"/>
+            <path fill="currentColor" d="M16 0C7.164 0 0 7.164 0 16c0 2.824.736 5.488 2.024 7.784L0 32l8.408-2.008A15.926 15.926 0 0016 32c8.836 0 16-7.164 16-16S24.836 0 16 0zm0 29.333c-2.588 0-5.088-.74-7.244-2.132l-.52-.308-5.396 1.288 1.44-5.144-.336-.536A13.24 13.24 0 012.667 16c0-7.364 5.969-13.333 13.333-13.333S29.333 8.636 29.333 16 23.364 29.333 16 29.333zm7.308-9.977c-.4-.2-2.368-1.168-2.736-1.3-.368-.136-.636-.2-.904.2-.268.4-1.036 1.3-1.268 1.568-.236.268-.468.3-.868.1-.4-.2-1.688-.62-3.216-1.984-1.188-1.06-1.988-2.368-2.22-2.768-.236-.4-.024-.616.176-.816.18-.18.4-.468.6-.704.2-.232.268-.4.4-.668.136-.268.068-.5-.032-.7-.1-.2-.904-2.176-1.24-2.98-.328-.78-.66-.676-.904-.688-.232-.012-.5-.016-.768-.016s-.7.1-1.068.5c-.368.4-1.4 1.368-1.4 3.336s1.432 3.868 1.632 4.136c.2.268 2.824 4.312 6.844 6.048.956.416 1.704.664 2.288.848.96.304 1.836.26 2.528.156.772-.116 2.368-.968 2.7-1.904.336-.936.336-1.74.236-1.904-.1-.168-.368-.268-.768-.468z"/>
         </svg>
     </a>
 
